--- a/portfolio/Portfolio-Camiel-Nijman.html
+++ b/portfolio/Portfolio-Camiel-Nijman.html
@@ -4,15 +4,15 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Portfolio Nena Renting</title>
+        <title>Portfolio Camiel Nijman</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
         <div class="nav-container">
             <header>
-                <a href="#" class = "logo">Minor Smart Industry</a>
+                <a href="index.html" class = "logo">Minor Smart Industry</a>
                 <nav>
-                    <a href=>Project</a>
+                    <a href="Portfolio-Project.html">Project</a>
                     <a href="#" class="active">Camiel Nijman</a>
                     <a href="Portfolio-Nathan-van-der-Veer.html">Nathan van der Veer</a>
                     <a href="Portfolio-Nena-Renting.html">Nena Renting</a>
@@ -22,9 +22,19 @@
                 <nav>
                     <ul>
                         <li><a href="#about-me" class="active">About me</a></li>
-                        <li><a href="#leerdoelen">Leerdoelen</a></li>
+                        <li><a href="#leerdoelen">Leerdoelen</a>
+                            <ul class="sub-level">
+                                <li><a href="#leerdoelen-initiatief">Initiatief</a></li>
+                                <li><a href="#leerdoelen-meningen-adviezen">Meningen & Adviezen</a></li>
+                                <li><a href="#leerdoelen-ambitie">Ambitie</a></li>
+                                <li><a href="#leerdoelen-bewustheid">Bewustheid</a></li>
+                                <li><a href="#leerdoelen-feedback-zelfreflectie">Feedback & Zelfreflectie</a></li>
+                                <li><a href="#leerdoelen-actief-helpen">Actief helpen</a></li> 
+                            </ul>
+                        </li>
                         <li><a href="#workshops">Workshops</a>
                             <ul class="sub-level">
+                                <li><a href="#workshops-smart-me">Smart Me</a></li>
                                 <li><a href="#workshops-smart-business">Smart Business</a></li>
                                 <li><a href="#workshops-smart-technology">Smart Technology</a></li>
                                 <li><a href="#workshops-smart-connection">Smart Connection</a></li>
@@ -34,18 +44,52 @@
                 </nav>   
             </div>
         </div>
-        <section id="about-me">
-            <div>
-                
-            </div>
-        </section>
-        <section id="leerdoelen">LEERDOELEN</section>
-        <section id="workshops">WORKSHOPS
-            <section id="workshops-smart-business">SMART BUSINESS</section>
-            <section id="workshops-smart-technology">SMART TECHNOLOGY</section>
-            <section id="workshops-smart-connection">SMART CONNECTION</section>
-        </section>
-
+        <div class="main-content">
+            <section id="about-me">
+                <h1>About me</h1>
+                <p>hoi</p>
+            </section>
+            <section id="leerdoelen">
+                <h1>leerdoelen</h1>
+                <section id="leerdoelen-initiatief">
+                    <h3>Initiatief</h3>
+                </section>
+                <section id="leerdoelen-meningen-adviezen">
+                    <h3>Meningen & Adviezen</h3>
+                </section>
+                <section id="leerdoelen-ambitie">
+                    <h3>Ambitie</h3>
+                </section>
+                <section id="leerdoelen-bewustheid">
+                    <h3>Bewustheid</h3>
+                </section>
+                <section id="leerdoelen-feedback-zelfreflectie">
+                    <h3>Feedback & Zelfreflectie</h3>
+                </section>
+                <section id="leerdoelen-actief-helpen">
+                    <h3>Actief helpen</h3>
+                </section>
+            </section>
+            <section id="workshops">
+                <h1>Workshops</h1>
+                <section id="workshops-smart-me">
+                    <h3>Smart me</h3>
+                    <p>hoi</p>
+                </section>
+                <section id="workshops-smart-business">
+                    <h3>Smart business</h3>
+                    <p>hoi</p>
+                </section>
+                <section id="workshops-smart-technology">
+                    <h3>Smart technology</h3>
+                    <p>hoi</p>
+                </section>
+                <section id="workshops-smart-connection">
+                    <h3>Smart connection</h3>
+                    <p>hoi</p>
+                </section>
+            </section>
+        </div>
         <script src="js/app.js"></script>
     </body>
 </html>
