--- a/portfolio/Portfolio-Nena-Renting.html
+++ b/portfolio/Portfolio-Nena-Renting.html
@@ -10,7 +10,7 @@
     <body>
         <div class="nav-container">
             <header>
-                <a href="Portfolio.html" class = "logo">Minor Smart Industry</a>
+                <a href="index.html" class = "logo">Minor Smart Industry</a>
                 <nav>
                     <a href="Portfolio-Project.html">Project</a>
                     <a href="Portfolio-Camiel-Nijman.html">Camiel Nijman</a>
@@ -22,7 +22,16 @@
                 <nav>
                     <ul>
                         <li><a href="#about-me" class="active">About me</a></li>
-                        <li><a href="#leerdoelen">Leerdoelen</a></li>
+                        <li><a href="#leerdoelen">Leerdoelen</a>
+                            <ul class="sub-level">
+                                <li><a href="#leerdoelen-initiatief">Initiatief</a></li>
+                                <li><a href="#leerdoelen-meningen-adviezen">Meningen & Adviezen</a></li>
+                                <li><a href="#leerdoelen-ambitie">Ambitie</a></li>
+                                <li><a href="#leerdoelen-bewustheid">Bewustheid</a></li>
+                                <li><a href="#leerdoelen-feedback-zelfreflectie">Feedback & Zelfreflectie</a></li>
+                                <li><a href="#leerdoelen-actief-helpen">Actief helpen</a></li> 
+                            </ul>
+                        </li>
                         <li><a href="#workshops">Workshops</a>
                             <ul class="sub-level">
                                 <li><a href="#workshops-smart-me">Smart Me</a></li>
@@ -42,7 +51,24 @@
             </section>
             <section id="leerdoelen">
                 <h1>leerdoelen</h1>
-                <p>hoi</p>
+                <section id="leerdoelen-initiatief">
+                    <h3>Initiatief</h3>
+                </section>
+                <section id="leerdoelen-meningen-adviezen">
+                    <h3>Meningen & Adviezen</h3>
+                </section>
+                <section id="leerdoelen-ambitie">
+                    <h3>Ambitie</h3>
+                </section>
+                <section id="leerdoelen-bewustheid">
+                    <h3>Bewustheid</h3>
+                </section>
+                <section id="leerdoelen-feedback-zelfreflectie">
+                    <h3>Feedback & Zelfreflectie</h3>
+                </section>
+                <section id="leerdoelen-actief-helpen">
+                    <h3>Actief helpen</h3>
+                </section>
             </section>
             <section id="workshops">
                 <h1>Workshops</h1>
