--- a/portfolio/Portfolio-Project.html
+++ b/portfolio/Portfolio-Project.html
@@ -10,9 +10,9 @@
     <body>
         <div class="nav-container">
             <header>
-                <a href="Portfolio.html" class = "logo">Minor Smart Industry</a>
+                <a href="index.html" class = "logo">Minor Smart Industry</a>
                 <nav>
-                    <a href="Portfolio-Project.html" class="active">Project</a>
+                    <a href="#" class="active">Project</a>
                     <a href="Portfolio-Camiel-Nijman.html">Camiel Nijman</a>
                     <a href="Portfolio-Nathan-van-der-Veer.html">Nathan van der Veer</a>
                     <a href="Portfolio-Nena-Renting.html">Nena Renting</a>
@@ -21,15 +21,15 @@
             <div class="sidenav">
                 <nav>
                     <ul>
-                        <li><a href="#about-impact-iot" class="active">About Impact IoT Solutions</a></li>
-                        <li><a href="#about-project">About Project</a></li>
+                        <li><a href="#impact-iot" class="active">About Impact IoT Solutions</a></li>
+                        <li><a href="#project">About Project</a></li>
                         <li><a href="#resultaten">Resultaten</a>
                             <ul class="sub-level">
-                                <li><a href="#subLevel-resultaten-projectplan">Projectplan</a></li>
-                                <li><a href="#subLevel-resultaten-onderzoeksrapport">Onderzoeksrapport</a></li>
-                                <li><a href="#subLevel-resultaten-aanbeveling-businesscase">Aanbeveling & Businesscase</a></li>
-                                <li><a href="#subLevel-resultaten-simulatie-digital-twin">Simulatie & Digital Twin</a></li>
-                                <li><a href="#subLevel-resultaten-pitstops">Pitstops</a></li>
+                                <li><a href="#resultaten-projectplan">Projectplan</a></li>
+                                <li><a href="#resultaten-onderzoeksrapport">Onderzoeksrapport</a></li>
+                                <li><a href="#resultaten-aanbeveling-businesscase">Aanbeveling & Businesscase</a></li>
+                                <li><a href="#resultaten-simulatie-digital-twin">Simulatie & Digital Twin</a></li>
+                                <li><a href="#resultaten-pitstops">Pitstops</a></li>
                             </ul>
                         </li>    
                     </ul>    
@@ -37,33 +37,33 @@
             </div>
         </div>
         <div class="main-content">
-            <section id="about-impact-iot">
+            <section id="impact-iot">
                 <h1>About Impact IoT Solutions</h1>
                 <p>hoi</p>
             </section>
-            <section id="about-project">
+            <section id="project">
                 <h1>About project</h1>
                 <p>hoi</p>
             </section>
             <section id="resultaten">
                 <h1>Resultaten</h1>
-                <section id="subLevel-resultaten-projectplan">
+                <section id="resultaten-projectplan">
                     <h3>Projectplan</h3>
                     <p>hoi</p>
                 </section>
-                <section id="subLevel-resultaten-onderzoeksrapport">
+                <section id="resultaten-onderzoeksrapport">
                     <h3>Onderzoeksrapport</h3>
                     <p>hoi</p>
                 </section>
-                <section id="subLevel-resultaten-aanbeveling-businesscase">
+                <section id="resultaten-aanbeveling-businesscase">
                     <h3>Aanbeveling & Businesscase</h3>
                     <p>hoi</p>
                 </section>
-                <section id="subLevel-resultaten-simulatie-digital-twin">
+                <section id="resultaten-simulatie-digital-twin">
                     <h3>Simulatie & Digital Twin</h3>
                     <p>hoi</p>
                 </section>
-                <section id="subLevel-resultaten-pitstops">
+                <section id="resultaten-pitstops">
                     <h3>Pitstops</h3>
                     <p>hoi</p>
                 </section>
