change portfolio.html to index.html

--- a/portfolio/Portfolio-Nathan-van-der-Veer.html
+++ b/portfolio/Portfolio-Nathan-van-der-Veer.html
@@ -12,7 +12,7 @@
 <body>
     <div class="nav-container">
         <header>
-            <a href="Portfolio.html" class="logo">Minor Smart Industry</a>
+            <a href="index.html" class="logo">Minor Smart Industry</a>
             <nav class="menu">
                 <a href="Portfolio-Project.html">Project</a>
                 <a href="Portfolio-Camiel-Nijman.html">Camiel Nijman</a>
