--- a/portfolio/Portfolio-Project.html
+++ b/portfolio/Portfolio-Project.html
@@ -10,7 +10,7 @@
     <body>
         <div class="nav-container">
             <header>
-                <a href="Portfolio.html" class = "logo">Minor Smart Industry</a>
+                <a href="index.html" class = "logo">Minor Smart Industry</a>
                 <nav class="menu">
                     <a href="Portfolio-Project.html" class="active">Project</a>
                     <a href="Portfolio-Camiel-Nijman.html">Camiel Nijman</a>
