--- a/Portfolio-Nathan-van-der-Veer.html
+++ b/Portfolio-Nathan-van-der-Veer.html
@@ -167,6 +167,7 @@
             <section id="workshops-smart-connection">
                 <h3>Smart connection</h3>
                 <div class="content"></div>
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2n2rMWe3bQvS6yCFPHjWsD?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             </section>
         </section>
         <section id="Eyeopeners">
