Toegevoegd kleuren test en leerdoel

--- a/Portfolio-Camiel-Nijman.html
+++ b/Portfolio-Camiel-Nijman.html
@@ -56,27 +56,43 @@
                         <img src="images/CamielN/camiel_nijman.png" alt="Camiel Nijman" height="250px" width="250px">
                         <h6>About me</h6>
                         <blockquote>
-                            <p> 
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consequat libero quis nibh feugiat malesuada. Duis id est eu orci viverra congue sit amet ut mi. Nullam in est quis enim aliquet bibendum nec ac enim. Sed quis justo ac massa mollis suscipit. Sed id consequat justo. Vivamus sed neque sed turpis ullamcorper luctus vel non massa. In hac habitasse platea dictumst. Proin non justo consequat, tempor elit sit amet, dignissim libero. Donec non ex sit amet dui commodo luctus a eget velit. Sed tincidunt pretium ipsum vel vehicula. Morbi hendrerit justo nec consectetur gravida. Quisque eget enim sit amet justo laoreet luctus ac vitae enim. Maecenas auctor magna eu massa maximus, et tristique odio pharetra. Donec convallis nulla quis nisl tincidunt, ut rhoncus ipsum auctor.
+                            <p>
+                                Ik ben Camiel Nijman, ik ben een student HBO-ICT met als specifieke richting ESD
+                                (Embedded Software Development). Mijn hobby’s zijn gamen, sporten, uitgaan met vrienden
+                                en “beunen” aan mijn projectjes. Bij het laatste ben ik bijvoorbeeld bezig geweest met
+                                het vervangen van de kabel van
+                                mijn pa’s koptelefoon met een 3.5mm socket zodat als de kabel stuk is je simpel weg een
+                                nieuwe kan aansluiten. Of een triac/dimmer module aansluiten op mijn ventilator zodat ik
+                                deze kan benaderen vanaf mijn telefoon via een web interface gehost op een ESP32.
+                                <br><br>
+                                Ik heb voor deze minor gekozen omdat ik meer ervaring en kennis wou opdoen vanuit
+                                lichtingen waar ik in het algemeen weinig mee samenwerk. Bij de opdrachten en projecten
+                                die ik heb uitgevoerd heb werk ik eigenlijk alleen maar samen met andere ICT'ers.
+                                Daarnaast heb ik binnen mijn opleiding verrassend weinig te maken gehad met onderwerpen
+                                als AI en 3d-printen. Terwijl dit technieken zijn die binnen mijn werkveld erg handig
+                                kunnen zijn.
                             </p>
                         </blockquote>
                         <div class="small-box">
                             <p>
                                 Student: Camiel Nijman
                                 Studentennummer: 1637897
-                                Bachelor: HBO-ICT ESD
+                                Bachelor: HBO-ICT Embedded
                                 Minor: Smart Industry
                             </p>
                         </div>
                     </div>
                     <div class="box-upperimg">
-                            <a href="images/wait_a_minute.jpg">
-                                <img src="images/wait_a_minute.jpg" alt="Kleurentest" height="200px" width="400px">
-                            </a>
+                        <a href="images/CamielN/kleuren_test.png">
+                            <img src="images/CamielN/kleuren_test.png" alt="Kleurentest" height="200px" width="400px">
+                        </a>
                         <h6>Kleurentest</h6>
                         <blockquote>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consequat libero quis nibh feugiat malesuada. Duis id est eu orci viverra congue sit amet ut mi. Nullam in est quis enim aliquet bibendum nec ac enim. Sed quis justo ac massa mollis suscipit. Sed id consequat justo. Vivamus sed neque sed turpis ullamcorper luctus vel non massa. In hac habitasse platea dictumst. Proin non justo consequat, tempor elit sit amet, dignissim libero. Donec non ex sit amet dui commodo luctus a eget velit. Sed tincidunt pretium ipsum vel vehicula. Morbi hendrerit justo nec consectetur gravida. Quisque eget enim sit amet justo laoreet luctus ac vitae enim. Maecenas auctor magna eu massa maximus, et tristique odio pharetra. Donec convallis nulla quis nisl tincidunt, ut rhoncus ipsum auctor.
+                                Bij de workshop over de managementgame heb ik een kleurentest ingevuld. Zoals hierboven
+                                zichtbaar is kwam voor mij voornamelijk de witte kleur eruit. Dit betekent dat ik er
+                                vanuit ga dat verandering van nature ontstaat en alles autonoom
+                                verandert.
                             </p>
                         </blockquote>
                     </div>
@@ -91,20 +107,53 @@
                         <h6>Leerdoel 1</h6>
                         <blockquote>
                             <p>
-                                Ik wil meer vanuit mijzelf contact opnemen met stakeholders via teams of email en hiermee ook efficienter omgaan.
+                                "Ik wil meer vanuit mijzelf contact opnemen met stakeholders via teams of email en
+                                hiermee ook efficiënter omgaan"
+                                <br><br>
+                                Ik vind persoonlijk het schrijven van een email verschrikkelijk. Het kost mij altijd
+                                veel meer tijd dan echt zou hoeven en ik stel het vaak uit of ik schuif het af op een
+                                ander.
+                                Dit tijdsverlies is vooral doordat ik continu twijfel over mijn woordkeuze of de
+                                intentie van de reactie die ik terugkrijg.
+                                Hoewel het klinkt als een heel simpel leerdoel lijkt het me wel iets waarin ik gelijk
+                                veel progressie kan maken en heeft het gelijk ook veel positieve effecten.
+                                Mijn hoop is dat door mijzelf te forceren een email of teams bericht te schrijven naar
+                                een stakeholder (bijvoorbeeld de opdrachtgever, begeleider, klant etc.) dit vanzelf
+                                makkelijker wordt.
+                                En dat ik in de toekomst deze taak niet meer uitstel. Ik denk namelijk veels te vaak te
+                                moeilijk na over een bericht om vervolgens een simpel duimpje omhoog terug te krijgen.
+                                <br><br>
+                                Ik heb allereerst mijn leerdoel voorgelegd aan mijn teamgenoten zodat zij hier
+                                natuurlijk rekening mee konden houden. Bij het contact met het bedrijf Caressi, een
+                                bedrijf dat problemen had met netcongestie waar wij dus meer over wouden weten, en het
+                                ACM, om onze bevindingen te controleren, kwam ik erachter dat de moeite die ik hierbij
+                                heb vooral in mijn hoofd zit. Doordat ik het vaak uitstel wordt het probleem alleen maar
+                                en ga ik er steeds meer tegen opzien. Ik merk dat als ik in kernwoorden uitschrijf wat
+                                ik wil toelichten in een email of telefoongesprek en mijzelf (vooral in het geval dat ik
+                                een mail moet uitschrijven) een tijdslimiet opzet dat het stukken beter gaat. Dit heeft
+                                mij ook geholpen bij het zoeken naar een stage waarbij ik nu in tegenstelling tot de
+                                vorige keer keuze had uit meerdere bedrijven. Voor een volgend project denk ik wel dat
+                                ik het nog steeds ga melden aan projectgenoten dat ik hier wel moeite mee heb (zodat ik
+                                dit niet alsnog in dezelfde valkuil val), maar ik merk wel dat ik mijzelf minder druk
+                                maak als ik met iemand contact op moet nemen.
                             </p>
                         </blockquote>
                     </div>
                     <div class="box-lowerimg">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/bgJ_1WuhUig?si=epCKUhnPRq25SALO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe width="560" height="315"
+                            src="https://www.youtube.com/embed/bgJ_1WuhUig?si=epCKUhnPRq25SALO"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         <h6>Leerdoel 2</h6>
                         <blockquote>
                             <p>
-                                Ik wil meer te weten komen over de processen die spelen binnen een bedrijf buitenom het ontwikkelen van een applicatie.
+                                Ik wil meer te weten komen over de processen die spelen binnen een bedrijf buitenom het
+                                ontwikkelen van een applicatie.
                             </p>
                         </blockquote>
                     </div>
-                </div>    
+                </div>
             </div>
         </section>
         <section id="competenties">
@@ -150,11 +199,16 @@
             </section>
             <section id="workshops-smart-connection">
                 <h3>Smart connection</h3>
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0yJRqj1i3BErDy4F44xrlr?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                <iframe style="border-radius:12px"
+                    src="https://open.spotify.com/embed/playlist/0yJRqj1i3BErDy4F44xrlr?utm_source=generator"
+                    width="100%" height="352" frameBorder="0" allowfullscreen=""
+                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                    loading="lazy"></iframe>
                 <div class="content"></div>
             </section>
         </section>
     </div>
     <script src="js/app.js"></script>
 </body>
+
 </html>
