--- a/Portfolio-Camiel-Nijman.html
+++ b/Portfolio-Camiel-Nijman.html
@@ -264,8 +264,8 @@
                         </div>
                         <div class="box-lowerimg">
                             <a href="images/CamielN/solid_works.jpg">
-                                <img src="images/CamielN/solid_works.jpg" alt="solid_works_bakje"
-                                    height="700px" width="900px">
+                                <img src="images/CamielN/solid_works.jpg" alt="solid_works_bakje" height="700px"
+                                    width="900px">
                             </a>
                             <h6>Additive manufacturing</h6>
                             <blockquote>
