Add Workshop tekst

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="content">
                 <div class="column-content">
                     <p class="first-page">
-                        Welkom bij ons portofolio!
+                        Welkom bij ons portfolio!
                     </p>
                     <p class="first-page" id="handtekening">
                         - Team Impact IoT Solutions (Nijman, C., Renting, N. & Van der Veer, N.)
